# pre-commit-hooks

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
pre_commit_hooks/: block_debug_statements.py  block_files.py  block_insecure_code.py
