[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-commit-hooks"
version = "1.0.0"
description = "Custom pre-commit hooks to block specific file types"
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
block-files = "pre_commit_hooks.block_files:main"

[tool.setuptools]
packages = ["pre_commit_hooks"]